# scalarhackathon

./: Dockerfile  README.md  app.py  baseline.py  engine.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
