[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fin-rebalancer"
version = "0.1.0"
description = "AI-driven portfolio rebalancing environment for OpenEnv India Hackathon 2026"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.25.0",
    "openai>=1.12.0",
]

[tool.setuptools]
packages = ["."]

[tool.openenv]
entrypoint = "app:app"
port = 7860
